Opens up homepage on launch

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Login - PKB</title>
-        <link rel = "stylesheet" type = "text/css" href = "template.css"/>
+        <link rel = "stylesheet" type = "text/css" href = "../static/css/template.css"/>
     </head>
     
     <body>
