--- a/app/templates/topic.html
+++ b/app/templates/topic.html
@@ -3,10 +3,21 @@
 {% block content %}
 {% include 'flash.html' %}
 <div class="well">
-    <h2>
-        <img src = "https://cloud.githubusercontent.com/assets/8584480/5037914/2619ab10-6b59-11e4-8f8d-04d50a1e94f0.jpg" border = "0" align = "center">&nbsp;Personal Knowledge Base
-    </h2>
-    
-    <br>
+    <!-- this page should have the topic name at the top, then a text box for notes about the topic below it, then children topics of this topic below that, then tags for this topic-->
+    <h2> {{ topic }}</h2> 
+
+    <textarea wrap="hard" cols="100" name="topicDescription">Enter information about this topic here.</textarea>
+
+    <p>&nbsp;</p>
+    <div class="Subtopics">
+    {% if subTopics|length > 0 %}
+        {% for subTopic in subTopics %}
+            <button type="button">{{ subTopic }}</button>
+        {% endfor %}
+    {% else %}
+        <button type="button">dksj</button>
+    {% endif %}
+    </div>
+
 </div>
 {% endblock %}
