Can access top-level topic from user page

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,12 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
 {% include 'flash.html' %}
-{% include './models' %}
 <div class="well">
-  <h2>Welcome {{ User.username }}. Let's get started.</h2>
+  <h2>Welcome {{ g.user.username }}. Let's get started.</h2>
   <p>
     Welcome to PKB, the one stop repository for all you know and more!
     Once you access your myPKB you can create and delete topics in your Topics list.
   </p>
-  <a href="topic.html">Access myPKB</a>
+
+  <h4>Top Level Topics</h4>
+  {% for topic in topics %}
+  	<a class="btn" type="submit" href="{{ url_for('topic', topic=topic, topicParent=g.user.username) }}">{{ topic }}</a>
+  {% endfor %}
 </div>
+{% endblock %}
