--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,13 +9,14 @@
   </p>
 
   <h4>Top Level Topics</h4>
-  {% if topics %}
-  {% for topic in topics %}
-  	<a class="btn" type="submit" href="{{ url_for('topic', topic=topic, topicParent=user.username) }}">{{ topic }}</a>
-  {% endfor %}
-  {% else %}
-	<br>
-	<a class="btn btn-primary btn-lg btn-block" href="{{ url_for('edittopic') }}">Create New Topic!</a>
-  {% endif %}
+
+	{% for topic in topics %}
+		<a class="btn" type="submit" href="{{ url_for('topic', topic=topic, topicParent=g.user.username) }}">{{ topic }}</a>
+	{% endfor %}
+
+
+	<br><br>
+	<a class="btn btn-primary btn-lg btn-block" href="{{ url_for('edittopic', topicParent=g.user.username) }}">Create New Topic!</a>
+
 </div>
 {% endblock %}
