--- a/app/templates/topic.html
+++ b/app/templates/topic.html
@@ -3,8 +3,10 @@
 {% block content %}
 {% include 'flash.html' %}
 <div class="well">
-    <!-- this page should have a link to the parent at the top, then the topic name, then tags for this topic, then a text box for notes about the topic below it, then children topics of this topic below that-->
-    {% if topicParentParent %}
+    <!-- this page should have a link to the parent at the top, then the topic name, 
+         then tags for this topic, then a text box for notes about the topic below it, 
+         then children topics of this topic below that-->
+    {% if g.user.username not in [topicParent, topicParentParent] %}
     <a href="{{ url_for('topic', topic=topicParent , topicParent=g.user.username) }}" class="btn btn-primary" type="submit" >Parent: {{ topicParent }}</a>
     {% endif %}
 
@@ -18,11 +20,12 @@
     <br><br>
 
     <!-- Topic description -->
-    <textarea readonly wrap="hard" cols="100" name="topicDescription">{{ description }}</textarea>
+    <h4>Description:</h4>
+    <textarea readonly wrap="hard" class="span6" name="topicDescription">{{ description }}</textarea>
     <br>
 
     <!-- Edit topic info button -->
-    <a href="{{ url_for('edittopic', topic=topic, topicParent=topicParent) }}" class="btn btn-primary" type="submit">Edit information</a>
+    <a href="{{ url_for('edittopic', user=g.user.username, topic=topic, topicParent=topicParent) }}" class="btn btn-primary" type="submit">Edit information</a>
 
     <br><br><br>
 
@@ -35,7 +38,7 @@
         <br><br>
 
         <!-- Add subtopc button -->
-        <a href="{{ url_for('edittopic', topicParent=topic) }}" class="btn btn-primary" type="submit" >Add a subtopic</a>
+        <a href="{{ url_for('edittopic', user=g.user.username, topicParent=topic) }}" class="btn btn-primary" type="submit" >Add a subtopic</a>
     </div>
 </div>
 {% endblock %}
