--- a/app/templates/edittopic.html
+++ b/app/templates/edittopic.html
@@ -6,13 +6,21 @@
     <!-- This page allows you to create or edit a topic -->
     {% if topicParent and topic %}
     <h2>Edit {{ topic }}</h2>
-    <form class="form" action="{{ url_for('edittopic', topic=topic, topicParent=topicParent) }}" method="post">
+    <form class="form" action="{{ url_for('edittopic', user=g.user.username, topic=topic, topicParent=topicParent) }}" method="post">
     {% else %}
-    <h2>Create New Topic!<h2>
-    <form class="form" action="{{ url_for('edittopic', topicParent=topicParent) }}" method="post">
+    <div>
+        {% if topicParent == g.user.username %}
+        <h2><u>Create New High-Level Topic:</u><h2>
+        {% else %}
+        <h2><u>Create New Subtopic:</u><h2>
+        <h5>{ Child topic of {{ topicParent }} }</h5>
+        {% endif %}
+    </div>
+    <form class="form" action="{{ url_for('edittopic', user=g.user.username, topicParent=topicParent) }}" method="post">
     {% endif %}
     {{ description }}
-    
+        
+        <!-- topic title -->
         <div class="control-group {% if form.errors.username %} error {% endif %}">
             <div class="controls">
                 {{form.topicTitle(size=30, class = "span3", value=topic ,placeholder="Topic Title")}}<br>
@@ -21,7 +29,17 @@
                 {% endfor %}
             </div>
         </div>
-        <!-- tags here -->
+        <!-- description -->
+        <div class="control-group {% if form.errors.username %} error {% endif %}">
+            <div class="controls">
+                        <!-- CANT FIGURE OUT HOW TO DISPLAY DESCRIPTION BOX AS WIDER -->
+                {{ form.description(class ="span6", rows="20", placeholder="Description")}}<br>
+                {% for error in form.errors.description %}
+                <span class="help-inline">[{{error}}]</span><br>
+                {% endfor %}
+            </div>
+        </div>
+        <!-- tags -->
         <div class="control-group {% if form.errors.username %} error {% endif %}">
             <div class="controls">
                 {{form.tags(size=30, class = "span3", value=tags, placeholder="tags (ex: python, IO, strings) ")}}<br>
@@ -31,20 +49,11 @@
             </div>
         </div>
 
-        <div class="control-group {% if form.errors.username %} error {% endif %}">
-            <div class="controls">
-                        <!-- CANT FIGURE OUT HOW TO DISPLAY DESCRIPTION BOX AS WIDER -->
-                {{ form.description(rows="20", cols="60", placeholder="Description")}}<br>
-                {% for error in form.errors.description %}
-                <span class="help-inline">[{{error}}]</span><br>
-                {% endfor %}
-            </div>
-        </div>
-
         <!-- Submit button -->
         <div class="control-group">
             <div class="controls">
                 <input class="btn btn-primary" type="submit" value="Save Topic">
+                <a href="{{ url_for('home') }}", class="btn btn-danger">Cancel</a>
             </div>
         </div>
     </form>
