--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,23 +6,22 @@
     {% else %}
     <title>PKB</title>
     {% endif %}
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div class="container">
-      <div class="navbar">
-        <div class="navbar-inner">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="/">PKB (Personal Knowledge Base)</a>
-          <ul class="nav">
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="/">PKB</a>
+          </div>
+          <div>
+          <ul class="nav navbar-nav">
             <li><a href="{{ url_for('home') }}">Home</a></li>
             {% if g.user.is_authenticated() %}
             <li><a href="{{ url_for('logout') }}">Logout</a></li>
@@ -31,8 +30,9 @@
             <li><a href="{{ url_for('register') }}">Register</a></li>
             {% endif %}
           </ul>
+          </div>
         </div>
-      </div>
+      </nav>
       <div class="row">
         <div class="span12">
          {% block content %}{% endblock %} 
