--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,32 +2,41 @@
 {% block content %}
 {% include 'flash.html' %}
 <div class="well">
-    <h2>
-        <img src = "https://cloud.githubusercontent.com/assets/8584480/5037914/2619ab10-6b59-11e4-8f8d-04d50a1e94f0.jpg" border = "0" align = "center">&nbsp;Personal Knowledge Base
-    </h2>
-    <form class="form" action="" method="post" name="login">
-        {{form.hidden_tag()}}
-        <div class="control-group{% if form.errors.username %} error{% endif %}">
-            <div class="controls">
-                {{ form.username(size=30, class = "span3", placeholder="Username") }}<br>
-                {% for error in form.errors.username %}
-                <span class="help-inline">[{{error}}]</span><br>
-                {% endfor %}
+    <div class="row">
+        <div class="col-md-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Please sign in</h3>
+                </div>
+                <div class="panel-body">
+                    <form accept-charset="UTF-8" role="form" method="post">
+                    {{form.hidden_tag()}}
+                    <fieldset>
+                        <div class="form-group">
+                            {{ form.username(size=30, class = "span3", placeholder="Username") }}<br>
+                            {% for error in form.errors.username %}
+                            <span class="help-inline">[{{error}}]</span><br>
+                            {% endfor %}
+                        </div>
+                        <div class="form-group">
+                            {{form.password(size=30, class = "span3", placeholder="Password")}}<br>
+                            {% for error in form.errors.password %}
+                            <span class="help-inline">[{{error}}]</span><br>
+                            {% endfor %}
+                        </div>
+                        <div class="checkbox">
+                            <label class="checkbox" for="remember_me"> 
+                                {{ form.remember_me }} Remember Me                           
+                                <a style="float:right" href="{{ url_for('register') }}">Not Registered?</a>
+                            </label>
+                        </div>
+                        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Login">
+                    </fieldset>
+                    </form>
+                </div>
             </div>
         </div>
-        <div class="control-group{% if form.errors.password %} error{% endif %}">
-            <div class="controls">
-                {{form.password(size=30, class = "span3", placeholder="Password")}}<br>
-                {% for error in form.errors.password %}
-                <span class="help-inline">[{{error}}]</span><br>
-                {% endfor %}
-            </div>
-        </div>
-        <div class="control-group form-inline">
-            <label class="checkbox" for="remember_me"> {{ form.remember_me }} Remember Me</label>
-            <input class="btn btn-primary" style="margin-left:85px" type="submit" value="Sign In">
-        </div>
-    </form>
+    </div>
     <br>
     <h5>&copy;Copyright PythonGroup 2014. All Rights Reserved.</h5>
 </div>
