--- a/app/templates/topic.html
+++ b/app/templates/topic.html
@@ -1,4 +1,3 @@
-
 {% extends "base.html" %}
 {% block content %}
 {% include 'flash.html' %}
@@ -10,35 +9,90 @@
     <a href="{{ url_for('topic', topic=topicParent , topicParent=g.user.username) }}" class="btn btn-primary" type="submit" >Parent: {{ topicParent }}</a>
     {% endif %}
 
-    <h2> {{ topic }}</h2> 
+    <div class="row">
+        <div class="col-md-6">
+            <div class="panel panel-primary">
 
-    <!-- tags here -->
-    {% for tag in tags %}
-        <label class="label">{{ tag }}</label>
-    {% endfor %}
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                      <b>{{ topic }}<b>
+                    </h3>
+                </div>
 
-    <br><br>
+                <div class="panel-body">
 
-    <!-- Topic description -->
-    <h4>Description:</h4>
-    <textarea readonly wrap="hard" class="span6" name="topicDescription">{{ description }}</textarea>
-    <br>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title"><b>Description:<b></h3>
+                                </div>
+                                <div class="panel-body" style="padding-top:5px; padding-bottom:0px;">
+                                    <textarea readonly wrap="hard" style="width:100%; resize:none;" rows="10" name="topicDescription">
+                                        {% if description %}
+                                            {{ description }}
+                                        {% else %}
+                                        ... click Edit Topic to add a description!
+                                        {% endif %}
+                                    </textarea>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            
+                    <div class="row">
+                        <div class="col-md-12"> 
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title"><b>Subtopics:<b></h3>
+                                </div>
+                                <div class="panel-body" style="padding-top:5px; padding-bottom:0px;">
 
-    <!-- Edit topic info button -->
-    <a href="{{ url_for('edittopic', user=g.user.username, topic=topic, topicParent=topicParent) }}" class="btn btn-primary" type="submit">Edit information</a>
+                                    FIGURE OUT THIS CONDITIONAL STATEMENT
 
-    <br><br><br>
+                                    {% if subTopics %}
 
-    <div class="Subtopics">
-        <h4>Subtopics</h4>
-        {% for subTopic in subTopics %}
-            <a class="btn" type="submit" href="{{ url_for('topic', topic=subTopic, topicParent=topic) }}">{{ subTopic }}</a>
-        {% endfor %}
+                                        {% for subTopic in subTopics %}
+                                            <a class="btn" type="submit" href="{{ url_for('topic', topic=subTopic, topicParent=topic) }}">{{ subTopic }}</a>
+                                        {% endfor %}
+                                    {% else %}
+                                        <p>No subtopics yet... add one!</p>
+                                    {% endif %}
+                                </div>
+                                <div class="panel-footer">
+                                    <a href="{{ url_for('edittopic', user=g.user.username, topicParent=topic) }}" class="btn btn-primary" type="submit" >Add a subtopic</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-        <br><br>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title"><b>Tags<b></h3>
+                                </div>
+                                <div class="panel-body" style="padding-top:5px; padding-bottom:0px;">
+                                    {% if topic.tags %}
+                                        {% for tag in topic.tags %}
+                                        <a class="btn">{{ tag }}</a>
+                                        {% endfor %}
+                                    {% else %}
+                                    <p>Click Edit Topic to add some tags!</p>
+                                    {% endif %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-        <!-- Add subtopc button -->
-        <a href="{{ url_for('edittopic', user=g.user.username, topicParent=topic) }}" class="btn btn-primary" type="submit" >Add a subtopic</a>
+                </div>
+
+                <div class="panel-footer">
+                    <a href="{{ url_for('edittopic', user=g.user.username, topic=topic, topicParent=topicParent) }}" class="btn btn-primary" type="submit">Edit Topic</a>
+                </div>
+
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
