--- a/app/templates/topic.html
+++ b/app/templates/topic.html
@@ -73,9 +73,10 @@
                                     <h3 class="panel-title"><b>Tags<b></h3>
                                 </div>
                                 <div class="panel-body" style="padding-top:5px; padding-bottom:0px;">
+                                    <i class="fa fa-tags"></i>
                                     {% if topic.tags %}
                                         {% for tag in topic.tags %}
-                                        <a class="btn">{{ tag }}</a>
+                                        <span class="badge badge-info"><a class="btn">{{ tag }}</a></span>
                                         {% endfor %}
                                     {% else %}
                                     <p>Click Edit Topic to add some tags!</p>
