Fixed Bootstrap not displaying correctly
To Do:
Split up Create_new_topic and Edit_topic
Fix CSS on Create_new_topic, Edit_topic
Decide on Final changes

--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -3,5 +3,9 @@
 
 {% block content %}
 <h1>File Not Found</h1>
-<p><a href="{{url_for('home')}}">Back</a></p>
+{% if g.user.is_authenticated() %}
+<p><a href="{{url_for('home', username=g.user.username )}}">Back</a></p>
+{% else %}
+<p><a href="{{url_for('login') }}">Back</a></p>
+{% endif %}
 {% endblock %}
