--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -20,7 +20,7 @@
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h2 class="panel-title text-primary" style="font-size:18px;">
-                  <a href="{{ url_for('topic', topic=topic.title, topicParent=g.user.username) }}">
+                  <a href="{{ url_for('topic', topic_name=topic.title, topicParent=g.user.username) }}">
                     <strong>{{ topic.title }}</strong>
                   </a>
                 </h2>
