Working on it...

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,7 +9,7 @@
         PKB is the one stop repository for all you know and more! Once you access your myPKB you can create and delete topics in your Topics list. Create your own personal knowledge encyclopedia to build and review as you learn more about your favorite topics!
       </p>
     </div>
-    <div class="panel-footer" style="padding:3px 3px 3px 3px">
+    <div class="panel-footer" style="padding:0 0 0 0">
       <div class="panel panel-primary">
         <div class="panel-heading">
           <h2 class="panel-title" style="font-size:24px">Top Level Topics</h2>
