--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,9 +4,9 @@
 <div class="well">
     <div class="row">
         <div class="col-md-4">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Please sign in</h3>
+                    <h3 class="panel-title" style="font-size:25px;">Please sign in</h3>
                 </div>
                 <div class="panel-body">
                     <form accept-charset="UTF-8" role="form" method="post">
