--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,7 @@
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <!--<img class="navbar-brand" src = "https://cloud.githubusercontent.com/assets/8584480/5037914/2619ab10-6b59-11e4-8f8d-04d50a1e94f0.jpg" border = "0" align = "center"> -->
+            <img class="navbar-brand" src = "https://cloud.githubusercontent.com/assets/8584480/5037914/2619ab10-6b59-11e4-8f8d-04d50a1e94f0.jpg" border = "0" valign = "center">
             <a class="navbar-brand" href="/">PKB</a>
           </div>
           <div>
