--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,7 +36,10 @@
       </nav>
       <div class="row">
         <div class="span12">
+          <div class="well">
          {% block content %}{% endblock %} 
+         <h5>&copy;Copyright PythonGroup 2014. All Rights Reserved.</h5>
+         </div>
         </div>
       </div>
     </div>
