--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -49,6 +49,7 @@
         <a class="btn btn-primary btn-lg btn-block" href="{{ url_for('edittopic', user=g.user.username) }}">Create New Topic!</a>
       </div>
     </div>
+  </div>
 </div>
 
 {% endblock %}
