--- a/app/templates/edittopic.html
+++ b/app/templates/edittopic.html
@@ -2,54 +2,74 @@
 {% block content %}
 {% include 'flash.html' %}
 <!-- This page allows you to create or edit a topic -->
-{% if topicParent and topic %}
-<h2>Edit {{ topic }}</h2>
-{% else %}
-    {% if topicParent == g.user.username %}
-    <h2><u>Create New High-Level Topic:</u><h2>
-    {% else %}
-    <h2><u>Create New Subtopic:</u><h2>
-    <h5>Child topic of {{ topicParent }}</h5>
-    {% endif %}
-{% endif %}
-<form accept-charset="UTF-8" role="form" method="post">
-{{form.hidden_tag()}}
-    
-    <!-- topic title  -->
-    <div class="control-group {% if form.errors.username %} error {% endif %}">
-        <div class="controls">
-            {{form.topicTitle(size=30, class = "span3", value=topic ,placeholder="Topic Title")}}<br>
-            {% for error in form.errors.topicTitle %}
-            <span class="help-inline">[{{error}}]</span><br>
-            {% endfor %}
-        </div>
-    </div>
-    <!-- description -->
-    <div class="control-group {% if form.errors.username %} error {% endif %}">
-        <div class="controls">
-                    <!-- CANT FIGURE OUT HOW TO DISPLAY DESCRIPTION BOX AS WIDER -->
-            {{ form.description(class ="span6", rows="20", placeholder="Description")}}<br>
-            {% for error in form.errors.description %}
-            <span class="help-inline">[{{error}}]</span><br>
-            {% endfor %}
-        </div>
-    </div>
-    <!-- tags -->
-    <div class="control-group {% if form.errors.username %} error {% endif %}">
-        <div class="controls">
-            {{form.tags(size=30, class = "span3", value=tags, placeholder="tags (ex: python, IO, strings) ")}}<br>
-            {% for error in form.errors.tags %}
-            <span class="help-inline">[{{error}}]</span><br>
-            {% endfor %}
-        </div>
-    </div>
+<div class="row">
+    <div class="col-md-5">
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="padding-bottom:0px;">
+                {% if topicParent and topic %}
+                <h3 class="panel-title" style="font-size:25px;">Edit {{ topic }}</h3>
+                {% elif topicParent == g.user.username %}
+                    <h3 class="panel-title" style="font-size:25px;">Create New High-Level Topic<h3>
+                {% else %}
+                    <h3 class="panel-title" style="font-size:25px;">Create New Subtopic<h3>
+                    <h5>Child topic of <a style="color:#FFFFFF" href="url_for('topic', topic_name=topicParent, topicParent=UserTopic.query.filter(UserTopic.title == topicParent).first().parent">{{ topicParent }}</a></h5>
+                {% endif %}
+            </div>
+            <div class="panel-body">
+                <form accept-charset="UTF-8" role="form" method="post">
+                {{form.hidden_tag()}}
+                    
+                    <!-- topic title  -->
+                    <div class="form-group {% if form.errors.username %} error {% endif %}">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title" style="font-size:18px;">Topic Title</h3>
+                            </div>
+                            <div class="panel-body">
+                                {{form.topicTitle(size=30, class = "span3", value=topic ,placeholder="Enter title here...")}}<br>
+                                {% for error in form.errors.topicTitle %}
+                                <span class="help-inline">[{{error}}]</span><br>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                    <!-- description -->
+                    <div class="form-group {% if form.errors.username %} error {% endif %}">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title" style="font-size:18px;">Description</h3>
+                            </div>
+                            <div class="panel-body">
+                                {{ form.description(class="span3", placeholder="Enter description here...")}}<br>
+                                {% for error in form.errors.description %}
+                                <span class="help-inline">[{{error}}]</span><br>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                    <!-- tags -->
+                    <div class="form-group {% if form.errors.username %} error {% endif %}">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title" style="font-size:18px;">Description</h3>
+                            </div>
+                            <div class="panel-body">
+                                {{form.tags(size=30, class = "span3", value=tags, placeholder="tags (ex: python, IO, strings) ")}}<br>
+                                {% for error in form.errors.tags %}
+                                <span class="help-inline">[{{error}}]</span><br>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
 
-    <!-- Submit button -->
-    <div class="control-group">
-        <div class="controls">
-            <input class="btn btn-primary" type="submit" value="Save Topic">
-            <a href="{{ url_for('home', username=g.user.username) }}", class="btn btn-danger">Cancel</a>
+                    <!-- Submit button -->
+                    <div class="form-group">
+                        <input class="btn btn-primary" type="submit" value="Save Topic">
+                        <a href="{{ url_for('home', username=g.user.username) }}", class="btn btn-danger">Cancel</a>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-</form>
+</div>
 {% endblock %}
